--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ nav a {
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="education.html">Education</a>
-        <a href="project.html">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="certifications.html">Certifications</a>
         <a href="skills.html">Skills</a>
         <a href="internships.html">Internships</a>
