--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="skills.html">Skills</a>
         <a href="internships.html">Internships</a>
         <a href="contact.html">Contact</a>
+         <a href="publication.html">Publication</a>
     </nav>
     <div class="container">
         <div class="card floating">
