--- a/education.html
+++ b/education.html
@@ -18,6 +18,7 @@
         <a href="certifications.html">Certifications</a>
         <a href="internships.html">Internships</a>
         <a href="contact.html">Contact</a>
+        <a href="publication.html">Publication</a>
     </nav>
     <div class="container">
         <div class="card floating">
