--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ nav a {
         <a href="skills.html">Skills</a>
         <a href="internships.html">Internships</a>
         <a href="contact.html">Contact</a>
+        <a href="publication.html">Publication</a>
         
     </nav>
     <div class="container">
