--- a/internships.html
+++ b/internships.html
@@ -16,9 +16,10 @@
         <a href="education.html">Education</a>
         <a href="projects.html">Projects</a>
         <a href="certifications.html">Certifications</a>
-        <a href="internships.html">Internships</a>
-        <a href="contact.html">Contact</a>
         <a href="publication.html">Publication</a>
+        <a href="skills.html">Skills</a>
+        <a href="contact.html">Contact</a>
+    
         
     </nav>
     <div class="container">
