--- a/publication.html
+++ b/publication.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="container">
         <div class="card floating">
-            <h2>”Transitioning Flexible Education in the Era of Generative AI Chatbot</h2>
+            <h2>Transitioning Flexible Education in the Era of Generative AI Chatbot</h2>
             <p>Published in the International Journal for Multidisciplinary Research (IJFMR), Vol.[7], Issue [4], 2025</p>
         </div>
         
