--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="contact-info">
                 <p>Email: <a href="mailto:your.email@example.com">vbsvreddy@gmail.com</a></p>
                 <p>Phone: <a href="tel:+1234567890">+(91) 7416221111</a></p>
-                <p>LinkedIn: <a href="vaibhavportfolio741.netlify.app">LinkedIn</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/vaibhav-reddy-ba428b245/">LinkedIn</a></p>
                 <p>GitHub: <a href="https://github.com/Vaibhav7416" target="_blank">Github</a></p>
             </div>
         </div>
