--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@ nav a {
     <footer>
         <p>&copy; 2025 My Portfolio</p>
     </footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
